<resources>
    <string name="app_name">rooyesh</string>
    <string name="scrollingFABBehavior" translatable="false">com.setayeshco.rooyesh.ui.ScrollingFABBehavior</string>
    <string name="FACEBOOK_APP_ID" translatable="false">put your facebook app ID</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">put your fb account kit token</string>
    <string name="splash_message"> نگرشی نوین در ابزارهای آموزشی </string>
    <string name="key_message_notifications_settings_light" translatable="false">message_notifications_settings_light</string>
    <string name="key_message_group_notifications_settings_tone" translatable="false">message_group_notifications_settings_tone</string>
    <string name="key_message_group_notifications_settings_vibrate" translatable="false">message_group_notifications_settings_vibrate</string>
    <string name="key_message_group_notifications_settings_light" translatable="false">message_group_notifications_settings_light</string>
    <string name="key_call_notifications_settings_vibrate" translatable="false">call_notifications_settings_vibrate</string>
    <string name="key_enter_send" translatable="false">enter_send</string>
    <string name="key_message_font_size" translatable="false">message_font_size</string>
    <string name="key_wallpaper_message" translatable="false">wallpaper_message</string>
    <string name="key_conversations_tones" translatable="false">conversation_tones</string>
    <string name="key_message_notifications_settings_tone" translatable="false">message_notifications_settings_tone</string>
    <string name="key_call_notifications_settings_tone" translatable="false">call_notifications_settings_tone</string>
    <string name="key_message_notifications_settings_vibrate" translatable="false">message_notifications_settings_vibrate</string>
    <string name="picture_transition" translatable="false">Picture transition</string>
    <string name="user_image_transition" translatable="false">userImage</string>
    <string name="user_name_transition" translatable="false">userName</string>
    <string name="app_service_name" translatable="false">MessageService</string>
    <string name="icon_no_calls" translatable="false">\ue892</string>
    <string name="icon_crash" translatable="false">\ue7e8</string>
    <string name="icon_no_contacts" translatable="false">\ue892</string>
    <string name="icon_no_conversations" translatable="false">\ue892</string>
    <string name="chats_title_tab" translatable="false">\ue7db</string>
    <string name="contacts_title_tab" translatable="false">\ue722</string>
    <string name="calls_title_tab" translatable="false">\ue76a</string>
    <string name="icon_settings" translatable="false">\ue672</string>
    <string name="icon_chat" translatable="false">\ue7db</string>
    <string name="icon_notification" translatable="false">\ue8aa</string>
    <string name="icon_about" translatable="false">\ue956</string>
    <string name="icon_edit" translatable="false">\ue613</string>
    <string name="date_format_today">HH:mm</string>
    <string name="date_format_current_month">dd/MM/yyyy HH:mm</string>
    <string name="date_format_yesterday">YESTERDAY</string>
    <string name="date_format">dd/MM/yy</string>
    <string name="action_settings">تنضیمات</string>
    <string name="title_conversations">گفتگو</string>
    <string name="title_settings">تنضیمات</string>
    <string name="title_feed_back"><![CDATA[راهنمایی و درباره ما]]></string>
    <string name="more">بیشتر</string>
    <string name="title_sign_out">خروج</string>
    <string name="selected_count">%1$s انتخاب شده</string>
    <string name="number">شماره تلفن همراه</string>
    <string name="present">حاضر</string>
    <string name="absent">غایب</string>
    <string name="NoMessages">هیچ گفت و گویی موجود نیست شما می توانید یک گفت و گو را شروع کنید</string>
    <string name="NoCalls">تماسی وجود ندارد شما می توانید یک تماس جدید شروع کنید</string>
    <string name="error_response">آپدیت غیر ممکن</string>
    <string name="NoContacts">شماره تماسی وجود ندارد بعدا مراجعه کنید و یا شماره جدید اضافه کنید</string>
    <string name="type_msg">پیغام خود را بنویسید</string>
    <string name="NoResult">هیچ</string>
    <string name="error_response_contacts">ناتوانی در به روز رسانی شماره تماس ها.</string>
    <string name="error_response_conversations">ناتوانی در به روز رسانی گفت و گو ها.</string>
    <string name="error_response_groups">ناتوانی در به روز رسانی گروه ها.</string>
    <string name="error_response_messages">ناتوانی در به روز رسانی پیغام ها.</string>
    <string name="name_is_too_short">نام بسیارکوتاه است.</string>
    <string name="select_picture">یک عکس انتخاب کنید.</string>
    <string name="new_group">گروه جدید</string>
    <string name="starred_messages">پیام های شروع شده.</string>
    <string name="status">وضعیت</string>
    <string name="settings">تنظیمات</string>
    <string name="refresh_contacts">رفرش</string>
    <string name="search">جست و جو</string>
    <string name="add_contact">اضافه کردن شماره تماس</string>
    <string name="new_message">پیغام جدید</string>
    <string name="use_whats_clone">سلام در حال استفاده از اپ</string>
    <string name="title_activity_add_members_to_group">گروه جدید</string>
    <string name="title_activity_settings">تنظیمات</string>
    <string name="title_activity_edit_profile">حساب کاربری</string>
    <string name="share">اشتراک گذاری</string>
    <string name="edit">تغییر</string>
    <string name="view_in_ad_book">نمایش در لیست آدرس ها</string>
    <string name="hello_welcome_to_whats_clone">خوش آمدید</string>
    <string name="next">بعدی</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification">***</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification_kit">شما یک اس ام اس دریافت خواهید کرد </string>
    <string name="resend">کد را دریافت نکرده اید؟ ارسال مجدد</string>
    <string name="enter_the_code_below_to_verify">کد را وارد کنید</string>
    <string name="enter_your_code">-- -- -- -- -- --</string>
    <string name="ok">تایید</string>
    <string name="please_enter_your_ver_code">لطفا کد تایید را وارد کنید</string>
    <string name="enter_a_val_number">لطفا شماره ی معتبر وارد کنید</string>
    <string name="change_number">تغییر شماره تلفن</string>
    <string name="invite">دعوت</string>
    <string name="your_current_status">وضعیت کنونی شما</string>
    <string name="select_your_new_status">وضعیت خود را انتخاب کنید</string>
    <string name="title_activity_status">وضعیت</string>
    <string name="Make_sure_delete_status">آیا میخواهید این وضعیت را پاک کنید</string>
    <string name="Yes">بله</string>
    <string name="No">خیر</string>
    <string name="delete">پاک کردن</string>
    <string name="delete_status">پاک کردن وضعیت</string>
    <string name="cancel">لغو</string>
    <string name="Ok">تایید</string>
    <string name="write_something">چیزی بنویسید</string>
    <string name="error_response_status">عدم دریافت وضعیت</string>
    <string name="title_activity_edit_status">تغیر وضعیت</string>
    <string name="deleteALL">پاک کردن همه</string>
    <string name="oops_something">خطایی رخ داده </string>
    <string name="oops_something_crashed">مشکلی در سیستم وجود دارد لطفا با پشتیبانی تماس بگیرید</string>
    <string name="no_status"> بدون وضعیت </string>
    <string name="no_username">نام کاربری موجود نیست</string>
    <string name="edit_status_activity_title">عوض کردن وضعیت</string>
    <string name="title_activity_edit_name">نام خود را وارد کنید</string>
    <string name="title_select_contacts">شماره را انتخاب کنید</string>
    <string name="success_response_contacts">لیست دانشجوها با موفقیت به روزرسانی شد</string>
    <string name="edit_group_name">تغییر نام گروه</string>
    <string name="exit">خروج</string>
    <string name="shareContact">به اشتراک گذاری شماره تماس</string>
    <string name="isTyping">در حال نوشتن...</string>
    <string name="isOffline">آفلاین</string>
    <string name="isOnline">آنلاین</string>
    <string name="lastSeen">آخرین دیدن</string>
    <string name="call">تماس</string>
    <string name="attach">اضافه کن</string>
    <string name="search_">جست و جو ...</string>
    <string name="add_new_member">اضافه کردن</string>
    <string name="type_group_subject_here">موضوع گروه را بنویسید...</string>
    <string name="provide_group_subject_and_optional_group_icon">موضوع گروه و ایکن آن را ارایه دهید (اختیاری)</string>
    <string name="title_activity_edit_group_name">اضافه کردن موضوع جدید</string>
    <string name="attach_contact">شماره تماس</string>
    <string name="attach_video">تصویر</string>
    <string name="attach_video_record">ضبط کردن ویدیو</string>
    <string name="attach_location">موقعیت</string>
    <string name="attach_audio">صوت</string>
    <string name="attach_camera">دوربین</string>
    <string name="attach_gallery">تصویر</string>
    <string name="attach_document">اسناد</string>
    <string name="media">رسانه</string>
    <string name="clear_chat">پاک کردن گفتگو</string>
    <string name="view_contact">نمایش شماره تماس</string>
    <string name="group_info">مشخصات گروه</string>
    <string name="search_hint">جست و جو ...</string>
    <string name="alert_message_delete_conversation">آیا مطمین هستید که میخواهید گفتگو را پاک کنید؟</string>
    <string name="join_title">ثبت نام</string>
    <string name="hold_to_record">نگه داشتن برای ضبط</string>
    <string name="camera_permission">مجوز دوربین</string>
    <string name="audio_permission">مجوز صوت</string>
    <string name="storage_permission">مجوز ذخیره سازی </string>
    <string name="contacts_permission">مجوز شماره تماس</string>
    <string name="vibrate_permission">مجوز لرزیدن</string>
    <string name="receive_sms_permission">دریافت مجوز پیامک</string>
    <string name="read_sms_permission">خواندن مجوز پیامک</string>
    <string name="call_phone_permission">مجوز تماس تلفنی </string>
    <string name="get_accounts_permission">دریافت مجوز حساب های کاربری</string>
    <string name="write_sync_settings_permission">دریافت مجوز حساب های کاربری</string>
    <string name="read_sync_settings_permission">دریافت مجوز حساب های کاربری</string>
    <string name="camera_permission_message">مجوز:</string>
    <string name="record_audio_permission_message">مجوز:</string>
    <string name="settings_audio_permission_message">مجوز:</string>
    <string name="write_storage_permission_message">مجوز:</string>
    <string name="read_storage_permission_message">مجوز:</string>
    <string name="read_contacts_permission_message">مجوز:</string>
    <string name="write_contacts_permission_message">مجوز:</string>
    <string name="vibrate_permission_message">مجوز:</string>
    <string name="receive_sms_permission_message">مجوز:</string>
    <string name="read_sms_permission_message">مجوز:</string>
    <string name="call_phone_permission_message">مجوز:</string>
    <string name="get_accounts_permission_message">مجوز:</string>
    <string name="write_sync_settings_permission_message">مجوز:</string>
    <string name="read_sync_settings_permission_message">مجوز:</string>
    <string name="no_thanks">خیر</string>
    <string name="chat_backup">پشتیبان گیری گفتگو ها</string>
    <string name="back_up_your_messages_you_can_restore_them_when_you_reinstall_the_application">پیغام های خود را پشتیبان بگیرید  تا بعد آن هارا بازیابی کنید</string>
    <string name="back_up">پشتیبان گیری</string>
    <string name="start">شروع</string>
    <string name="skip">رد کردن</string>
    <string name="backup_drive_folder">پوشه ی پشتیبان گیری</string>
    <string name="backup_drive_folder_not_set">N/A</string>
    <string name="backup_drive_recent">پشتیبان های آخر</string>
    <string name="backup_drive_dialog_restore_title">بازگشت به نسخه قبلی </string>
    <string name="backup_drive_dialog_restore_desc">بازیابی پشتیبان همه ی فایل ها را  از نو ایجاد می کند</string>
    <string name="backup_drive_dialog_restore_details">جزیات پشتیبان گیری</string>
</resources>