<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:weightSum="1"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_drive_dialog_restore_title"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/backup_drive_dialog_restore_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/backup_drive_dialog_restore_details"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_backup_restore_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="22/12/1997" />

    <TextView
        android:id="@+id/dialog_backup_restore_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="1.2MB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dialog_backup_restore_button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/bg_circle_sign_up"
                android:gravity="center"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_chevron_right_blue_24dp" />

            <TextView
                android:id="@+id/dialog_backup_restore_button_restorep_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_backup_restore_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/bg_circle_sign_up_edit"
                android:gravity="center"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_close_red_24dp" />

            <TextView
                android:id="@+id/dialog_backup_restore_button_cancel_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorRedDark"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>