<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/inputs_background"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/your_current_status"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
                    android:id="@+id/currentStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/no_status"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    emojicon:emojiconAlignment="baseline" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:background="@color/colorGray" />


                <com.setayeshco.rooyesh.ui.FontsView
                    android:id="@+id/editCurrentStatusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_item_rect_ripple"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/icon_edit"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/inputs_background"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/select_your_new_status"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/colorGray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/StatusList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@android:color/white"
                android:scrollbars="none"
                tools:listitem="@layout/row_status" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>